Revert "Mobile support"
This reverts commit 7d798520861cc48b49780c60136d53f6709e332f.

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@
 }
 
 
-@media (orientation: portrait) or (max-width: 600px) {
+@media (orientation: portrait) {
 
     #main-header-link {
         color: var(--color1-accent);
